@@ -1,15 +1,13 @@
 Package: clustext
 Title: Consistent Clustering for Text Data
-Version: 0.1.0
-Authors@R: c(person("Tyler", "Rinker", email =
-        "tyler.rinker@gmail.com", role = c("aut", "cre")))
+Version: 0.1.1
+Authors@R: c(person("Tyler", "Rinker", email = "tyler.rinker@gmail.com", role = c("aut", "cre")))
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Description: Optimized, consistent tools for clustering text data.
 Depends: R (>= 3.2.3)
-Imports: dplyr, fastcluster, gofastr, graphics, mclust, rNMF, skmeans,
-        slam, stats, termco, textshape, tm
+Imports: dplyr, fastcluster, gofastr, graphics, mclust, methods, rNMF, skmeans, slam, stats, termco, textshape, tm
 Suggests: testthat
-Date: 2016-03-28
+Date: 2016-03-29
 License: GPL-2
 LazyData: TRUE
 Roxygen: list(wrap = FALSE)
