@@ -45,6 +45,7 @@ S3method(summary,assign_cluster)
 export(approx_k)
 export(as_topic)
 export(assign_cluster)
+export(categorize)
 export(compare)
 export(cosine_distance)
 export(data_store)
@@ -56,4 +57,6 @@ export(get_text)
 export(hierarchical_cluster)
 export(kmeans_cluster)
 export(nmf_cluster)
+export(read_cluster_text)
 export(skmeans_cluster)
+export(write_cluster_text)
