@@ -6,11 +6,11 @@ citEntry(entry = "manual",
     author = "Tyler W. Rinker",
     organization = "University at Buffalo/SUNY",
     address = "Buffalo, New York",
-    note = "version 0.1.0",
+    note = "version 0.1.1",
     year = "2016",
     url = "http://github.com/trinker/clustext",
     textVersion  = paste("Rinker, T. W. (2016).",
         "clustext: Consistent Clustering for Text Data",
-        "version 0.1.0. University at Buffalo. Buffalo, New York.",
+        "version 0.1.1. University at Buffalo. Buffalo, New York.",
         "http://github.com/trinker/clustext")
 )
