@@ -1,0 +1,117 @@
+
+
+==========
+Cluster 1:
+==========
+ * But I'm not in favor of rounding up people and and and taking them out of this country.
+ * What is the deal that you would accept, Mister President?
+ * We take program after program that we don't absolutely have to have, and we get rid of them.
+ * I I was I was someone who ran businesses for twenty five years, and balanced the budget.
+ * We need to be talking about space.
+ * It's wonderful that Libya seems to be making some progress, despite this terrible tragedy.
+ * Number two, I asked the president a question I think Hispanics and immigrants all over the nation have asked.
+ * We need to have strong allies.
+ * Questions remain.
+ * Now, let me mention one other thing, and that is self deportation says let people make their own choice.
+
+
+
+
+==========
+Cluster 2: money & jobs
+==========
+ * You're going to get a repeat of the last four years.
+ * That's creating tens of thousands of jobs all across the country.
+ * But Governor, when it comes to our foreign policy, you seem to want to import the foreign policies of the one thousand nine hundred eightys, just like the social policies of the one thousand nine hundred fiftys and the economic policies of the one thousand nine hundred twentys.
+ * And we would have lost a million jobs.
+ * Look, I look at what's happening around the world, and i see Iran four years closer to a bomb.
+ * That's another trillion dollars that's dollar eight trillion.
+ * Median income is down dollar four thousand three hundred a family and twenty three million Americans out of work.
+ * eighty six.
+ * It is also essential for us to understand what our mission is in Iran, and that is to dissuade Iran from having a nuclear weapon through peaceful and diplomatic means.
+ * Massachusetts schools are ranked number one in the nation.
+
+
+
+
+==========
+Cluster 3: correct
+==========
+ * All right.
+ * All right.
+ * All right.
+ * Right.
+ * And that's right.
+ * Did I get that right?
+ * All right.
+ * All right.
+ * All right.
+ * All right.
+
+
+
+
+==========
+Cluster 4: =3
+==========
+ * You're absolutely right.
+ * Nothing Governor Romney just said is true, starting with this notion of me apologizing.
+ * Absolutely.
+ * Absolutely.
+ * Well, that's probably true.
+ * Candy, what Governor Romney said just isn't true.
+ * Absolutely.
+ * It's just not true.
+ * Not true.
+ * Absolutely.
+
+
+
+
+==========
+Cluster 5: ello govna
+==========
+ * Hi, Governor.
+ * Governor Romney, you did not|
+ * Governor?
+ * Governor|
+ * Governor?
+ * Governor|
+ * Governor|
+ * And you go first, Governor Romney.
+ * I was a governor.
+ * Governor?
+
+
+
+
+==========
+Cluster 6: mister
+==========
+ * This has not been Mister Oil, or Mister Gas, or Mister Coal.
+ * Mister President?
+ * Mister President|
+ * Mister President?
+ * But what would you do as president?
+ * Mister President?
+ * Mister President, Mister President, you're entitled as the president to your own airplane and to your own house, but not to your own facts.
+ * Mister President?
+ * This is a president who has not been able to do what he said he'd do.
+ * Mister President?
+
+
+
+
+==========
+Cluster 7: politeness
+==========
+ * And that is the question.
+ * Governor, this question is for you.
+ * But the president does get this question.
+ * For now, from the University of Denver, I'm Jim Lehrer.
+ * No, no, I had a question and the question was how much did you cut them by?
+ * And I appreciate that question.
+ * Thank you.
+ * Thank you so much.
+ * Thank you, and that's an opportunity for me, and I appreciate it.
+ * Well, Jim, I want to thank you, and I want to thank Governor Romney, because I think was a terrific debate, and I very much appreciate it. 
